发送所有球的角度和距离

--- a/ActCamera/ActCamera.vcxproj
+++ b/ActCamera/ActCamera.vcxproj
@@ -48,6 +48,9 @@
       <Command>gpio export 17 out</Command>
       <Message>export pin 17 using the gpio utility so that we can execute the blink program without sudo</Message>
     </RemotePostBuildEvent>
+    <ClCompile>
+      <AdditionalOptions>-l"wiringPi" %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <Link>
